--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/circle-cropped.png" alt="Pratheesh's Profile Picture"></td>
+      <td><img src="circle-cropped.png" alt="Pratheesh's Profile Picture"></td>
       <td>
         <h1>Pratheesh R</h1>
         <p><em>Business consultant and partner of <strong><a href="http://nv360.ae/">NV360 Technologies</a></strong></em></p>
